commit on master

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -72,13 +72,13 @@ body {
   padding: 0;
   background-color:var(--darkBlue2);
   color: white; 
-  background-image: url(../fylo-dark-theme-landing-page-master/images/bg-curvy-mobile.svg);
+  background-image: url(../images/bg-curvy-mobile.svg);
   background-size: 50%;
   background-image: var(--darkBlue1);
   background-repeat: no-repeat;
   background-position: center center;
   @media(min-width: 40em) {
-    background-image: url(../fylo-dark-theme-landing-page-master/images/bg-curvy-desktop.svg);
+    background-image: url(../images/bg-curvy-desktop.svg);
     background-size: 50%;
     background-image: var(--darkBlue1);
     background-repeat: no-repeat;
@@ -173,7 +173,7 @@ body {
 }
 
 .hero {
-    background-image: url(../fylo-dark-theme-landing-page-master/images/illustration-intro.png);
+    background-image: url(../images/illustration-intro.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -289,7 +289,7 @@ body {
   text-align: left;
   margin-bottom: 11.43rem;
   &__hero {
-    background-image: url(../fylo-dark-theme-landing-page-master/images/illustration-stay-productive.png);
+    background-image: url(../images/illustration-stay-productive.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -577,398 +577,4 @@ body {
     color: white;
   }
 }
-
-// /**
-// * TODO: Add flex property for header class
-// * !FooterIcons
-// */
-
-
-// .icons {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
- 
-
-//   &__facebook {
-//     width: 2rem;
-//     height: 2rem;
-//     border: solid 1px hsl(223, 100%, 88%);
-//     display: inline-flex;
-//     align-items: center;
-//     justify-content: center;
-//     border-radius: 50%;
-//     margin-right: 0.75rem;
-//   }
-
-//   &__twitter {
-//     width: 2rem;
-//     height: 2rem;
-//     border: solid 1px hsl(223, 100%, 88%);
-//     display: inline-flex;
-//     align-items: center;
-//     justify-content: center;
-//     border-radius: 50%;
-//     margin-right: 0.75rem;
-//   }
-
-//   &__twitter:hover {
-
-//     @media (min-width:40em){
-//         color: var(--Cyan);
-//         border-color: var(--Cyan);
-//         cursor: pointer;
-//         transition: all 0.5s ease-in-out;
-//     } 
-    
-//   }
-//   &__instagram {
-//     width: 2rem;
-//     height: 2rem;
-//     border: solid 1px hsl(223, 100%, 88%);
-//     display: inline-flex;
-//     align-items: center;
-//     justify-content: center;
-//     border-radius: 50%;
-//   }
-// }
-
-// .icons :nth-of-type(2):hover {
-//   color: var(--Cyan);
-//   cursor: pointer;
-//   transition: all 0.5s ease-in-out;
-// }
-
-// /**
-// * TODO: Add flex property for header class
-// * !Flex Properties
-// */
-
-// .flex {
-//   display: flex;
-
-//   &-jc-sb {
-//     justify-content: space-between;
-//   }
-//   &-jc-c {
-//     justify-content: center;
-//   }
-//   &-ac-c {
-//     align-self: center;
-//   }
-  
-
-// }
-
-// /**
-// * TODO: Add flex property for header class
-// * !ul/li reset
-// */
-// ul[class],
-// ol[class] {
-//     list-style: none;
-//     margin: 0;
-//     padding: 0;
-// }
-
-
-// /**
-// * TODO: Add flex property for header class
-// * !Header Query 
-// */
-
-// .header {
-//   @media(min-width: 80em) {
-//     margin-bottom: 5.4rem;
-//     max-width: 1280px;
-//     height: 52px;
-//     margin-right: auto;
-//     margin-left: auto;
-    
-//   }
-// }
-
-// /**
-// * TODO: Add flex property for header class
-// * !Main
-// */
-
-// @media (min-width: 40em) {
-//   .content {
-//     margin: 0;
-//     padding: 0;
-//   }
-  
-// }
-
-// /**
-// * TODO: Add flex property for header class
-// * !Contents
-// */
-
-// .content {
-//   .btn_1 {
-//     @media (min-width: 40em) {
-//       width: 280px;
-//       height: 56px;
-//       margin-bottom: 11.3rem;
-      
-//     }
-//   }
-// }
-
-// /**
-// * TODO: Add flex property for header class
-// * !Intro Query 
-// */
-
-// .intro {
-// @media(min-width: 40em) {
-//   &__heading >h1 {
-//     min-width: 734px;
-//     font-size: var(--fs-4xl);
-//     line-height: 60px;
-//     margin-bottom: 2.2rem
-//   }
-
-//   &__snippet {
-//     @media (min-width: 32em) {
-//       max-width: 413px;
-//       margin-right: auto;
-//       margin-left: auto;
-//       font-size: 14px;
-//       line-height: 21px;
-//     } 
-//   }
-// }
-// }
-
-
-// /**
-// * TODO: Add flex property for header class
-// * !Main_Card
-// */
-// .main_card {
-//   @media(min-width: 40em) {
-//     width: 880px;
-//     height: 507px;
-//     margin-bottom: 9.8rem;
-//   }
-
-//   .card_access {
-//     @media(min-width: 40em) {
-//       margin-right: auto;
-//       margin-left: auto;
-//       padding-top: 1rem;
-//       width: 349px;
-//       height: 214px;
-//     }
-//   }
-
-//   @media(min-width: 40em) {
-//     .card_access__icon {
-//       margin-bottom: 16px;
-//     }
-//     .__img {
-//       width: 84px;
-//       height: 78px;
-//     }
-//     .card_access h3 {
-//       font-size: 20px;
-//       margin-bottom: 0.57rem;
-//     }
-//     .card_access p {
-//       font-size: 14px;
-//       line-height: 21px;
-//     }
-//   }
-  
-//   .card_security {
-//     @media(min-width: 40em) {
-//       margin-right: auto;
-//       margin-left: auto;
-//       padding-top: 1rem;
-//       width: 384px;
-//       height: 215px;
-//     }
-//   }
-
-//   @media(min-width: 40em) {
-//     .card_security__icon {
-//       margin-bottom: 16px;
-//     }
-//     .__img {
-//       width: 66px;
-//       height: 84px;
-//     }
-//     .card_security__snippet {
-//       padding: 0rem 9px;
-//     }
-//     .card_security h3 {
-//       font-size: 20px;
-//       margin-bottom: 0.57rem;
-//     }
-//     .card_security p {
-//       font-size: 14px;
-//       line-height: 21px;
-//     }
-//   }
-
-//   .card_collaboration {
-//     @media(min-width: 40em) {
-//       margin-right: auto;
-//       margin-left: auto;
-//       width: 363px;
-//       height: 214px;
-//     }
-//   }
-
-//   @media(min-width: 40em) {
-//     .card_collaboration__icon {
-//       margin-bottom: 16px;
-//     }
-//     .__img {
-//       width: 84px;
-//       height: 69px;
-//     }
-//     .card_collaboration h3 {
-//       font-size: 20px;
-//       margin-bottom: 0.57rem;
-//     }
-//     .card_collaboration p {
-//       font-size: 14px;
-//       line-height: 21px;
-//     }
-//   }
-  
-  
-//   .card_Any_File {
-//     @media(min-width: 40em) {
-//       margin-right: auto;
-//       margin-left: auto;
-//       width: 363px;
-//       height: 214px;
-//     }
-//   }
-
-//   @media(min-width: 40em) {
-//     .card_Any_File__icon {
-//       margin-bottom: 16px;
-//     }
-//     .__img {
-//       width: 90px;
-//       height: 63px;
-//     }
-//     .card_Any_File h3 {
-//       font-size: 20px;
-//       margin-bottom: 0.57rem;
-//     }
-//     .card_Any_File p {
-//       font-size: 14px;
-//       line-height: 21px;
-//     }
-//   }
- 
-// }
-
-// /**
-// * TODO: Add flex property for header class
-// * !CTA
-// */
-// .cta {
-//   @media(min-width: 40em) {
-//     &__hero {
-//       width: 614.76px;
-//       height: 463.63px;
-//       margin-left: 105px;
-//     }
-//     &__header h4 {
-//       width: 329px;
-//       font-size: 40px;
-//       font-family: var(--primary);
-//       line-height: 50px;
-//       text-align: left;
-//       margin-bottom: 1.4rem;
-//     }
-//     &__snippet p {
-//       text-align: left;
-//     }
-//     &__link {
-//       text-align: left;
-//     }
-//     &__contents {
-//       width: 563px;
-//       height: 282px;
-//       margin-right: 100px;
-//     }
-//   }
-// }
-
-
-
-
-// /**
-// * TODO: Add flex property for header class
-// * !Form
-// */
-
-// @media(min-width: 57em){
-//   .container {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//   }
-//   .form-control {
-//     width: 873px;
-//     height: 275px;
-//     position: relative;
-    
-    
-//   }
-
-//   .cta {
-//     &__form_header h5 {
-//       font-size: 32px;
-//       line-height: 48px;
-//     }
-//     &__form_snippet {
-//       font-size: 14px;
-//       line-height: 21px;
-//       width: 637px;
-//     }
-//     &__spilt_form {
-//       display: flex;
-//       flex-direction: row;
-//       height:48px;
-//     }
-//   }
-
-//   .input-control {
-//     width: 480px;
-//     margin-right: 29px;
-//     margin-bottom: 5px;
-    
-//   }
-
-//   .btn_2 {
-//     width: 200px;
-//   }
-//   .input-control small {
-//     display: inline;
-//     color: red;
-//     font-family: var(--secondary);
-//     font-size: 10px;
-//     font-weight: 700;
-//     visibility: hidden;
-//     position: relative;
-//     bottom: 8%;
-//     right: 70%;  
-//   }
-//   .input-control.error small {
-//     color: red;
-//     visibility: visible;
-//     position: absolute;  
-//   } 
-// }
-
 
