--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -97,16 +97,29 @@
   * !Header Query 
   */
   
-  .header {
+  
     @media(min-width: 80em) {
-      margin-bottom: 5.4rem;
-      max-width: 1280px;
-      height: 52px;
-      margin-right: auto;
-      margin-left: auto;
+
+      .header {
+        margin-top: 90px;
+        margin-bottom: 5.4rem;
+        max-width: 1280px;
+        height: 52px;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      .header__logo {
+        width: 176px;
+        height: 52px;
+      }
+      .header__navbar a {
+        font-size: 16px;
+      }
+      
       
     }
-  }
+    
+  
   
   /**
   * TODO: Add flex property for header class
