--- a/app/scss/_quotes.scss
+++ b/app/scss/_quotes.scss
@@ -2,11 +2,18 @@ blockquote {
     
     background: var(--darkBlue4);
     text-align: left;
-    margin: auto;
+    
     padding: var(--spacer);
     border-radius: 3.93px;
-    margin: 0 auto;
-    height: 160px
+    
+    height: 160px;
+
+    @media(min-width: 57em){
+       
+            height: 200px;
+        
+    }
+    
 }
 
 
