--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -130,6 +130,7 @@
     .content {
       margin: 0;
       padding: 0;
+      max-width: 100%;
     }
     
   }
@@ -309,11 +310,13 @@
   * !CTA
   */
   .cta {
+    width: 100%;
+    
     @media(min-width: 40em) {
       &__hero {
         width: 614.76px;
         height: 463.63px;
-        margin-left: 105px;
+        
       }
       &__header h4 {
         width: 329px;
@@ -326,6 +329,9 @@
       &__snippet p {
         text-align: left;
       }
+      &__snippet {
+        width: 563px;
+      }
       &__link {
         text-align: left;
       }
@@ -333,6 +339,7 @@
         width: 563px;
         height: 282px;
         margin-right: 100px;
+        margin-top: 115px;
       }
     }
   }
@@ -350,6 +357,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      position: relative;
+      
+      
     }
     .form-control {
       width: 873px;
@@ -455,11 +465,12 @@
      &__hero {
        margin-bottom: 0rem;
        margin-right: 57.24px;
+       margin-left: 100px;
      }
     }
   
     .cta {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: .5fr .5fr;
     text-align: center;
     gap: 3rem;
     }
@@ -470,6 +481,7 @@
     .__contents {
         grid-column: 2 / 3;
         align-self: center;
+        
     } 
   }
   @media(max-width:40em){
@@ -485,9 +497,11 @@
   */
   
   @media(min-width: 57em){
-    .quotes {
-      display: grid;
+    .quotes li {
+      height: 200px;
+      width: 360px;
     }
+   
     .quotes__heading .name {
       font-size: 10px;
       line-height: 12px;
@@ -505,7 +519,8 @@
       justify-content: center;
       margin-right: 120px;
       margin-left: 120px;
-      
+      margin-bottom: 120px;
+      width: 1180px;
     }
     .break {
       width: 360px;
@@ -517,21 +532,39 @@
       letter-spacing: 0.5px;
     }
     .quotes {
+      display: grid;
+    }
+    .quotes {
       grid-template-columns: 1fr 1fr 1fr;
       max-height: 259px;
+    }
+    .quotes__quote {
+      max-width: 309.3px;
+      font-size: 14px;
+      line-height: 21px;
+      letter-spacing: 0.5px;
+      margin-bottom: 24px;
     }
     .split1 {
       grid-column: 1 / 2;
       margin-bottom: 0rem;
+      margin-right: 40px;
+      
+      
       
     }
     .split2 {
       grid-column: 2 / 3;
       margin-bottom: 0rem;
+     
+      
     }
     .split3 {
       grid-column: 3 / 4;
+      
+      
     }
+    
   }
   
   
@@ -549,10 +582,17 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     text-align: center;
     }
+    
     .footer {
-      min-height: 441px;
+      position: absolute;
+      z-index: -1;
+      height: auto;
+      margin-right: auto;
+      margin-left: auto;
       text-align: left;
       padding: 12rem 14rem 3.7rem 8.5rem;
+     
+
       &__contact {
         display: inline;
         width:379px;
@@ -597,6 +637,11 @@
  
   @media(min-width:90em) {
     .footer {
+      .logo {
+        height: 31px;
+        margin-bottom: 52px;
+      }
+      
       .location p {
         font-size: 16px;
         line-height: 24px;
